--- a/external/test-runtime/Configurations.props
+++ b/external/test-runtime/Configurations.props
@@ -4,6 +4,7 @@
     <BuildConfigurations>
       uap;
       uapaot;
+      netcoreappaot;
       netstandard;
       netfx;
     </BuildConfigurations>
