Fix netfx build

--- a/src/System.Reflection.Context/src/Configurations.props
+++ b/src/System.Reflection.Context/src/Configurations.props
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <BuildConfigurations>
       netcoreapp;
-      netfx;
       netstandard1.1;
       uap;
+      _netfx;
     </BuildConfigurations>
   </PropertyGroup>
 </Project>
