--- a/src/shims/manual/mscorlib.csproj
+++ b/src/shims/manual/mscorlib.csproj
@@ -9,8 +9,9 @@
   <ItemGroup>
     <Compile Include="mscorlib.forwards.cs" />
     <ReferencePath
-      Include="$(RuntimePath)System.*.dll;$(RuntimePath)Microsoft.*.dll"
-      Exclude="$(RuntimePath)Microsoft.Diagnostics.Tracing.TraceEvent.dll;$(RuntimePath)Microsoft.DiaSymReader.Native.*.dll" />
+      Include="$(_RuntimePath)System.*.dll;$(_RuntimePath)Microsoft.*.dll"
+      Exclude="$(_RuntimePath)Microsoft.Diagnostics.Tracing.TraceEvent.dll;$(_RuntimePath)Microsoft.DiaSymReader.Native.*.dll;$(_RuntimePath)System.ValueTuple.dll" />
+      <!-- System.ValueTuple has a netstandard configuration so it is bin placed in the target runtime when generating facades for 2.0 and it conflicts with the already defined type in System.Private.CoreLib -->
   </ItemGroup>
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
 </Project>
