--- a/src/System.Net.WebSockets.WebSocketProtocol/dir.props
+++ b/src/System.Net.WebSockets.WebSocketProtocol/dir.props
@@ -2,6 +2,7 @@
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="..\dir.props" />
   <PropertyGroup>
+    <PackageVersion>4.5.1</PackageVersion>
     <AssemblyVersion>4.0.0.0</AssemblyVersion>
     <AssemblyKey>Open</AssemblyKey>
   </PropertyGroup>
