--- a/src/System.Net.Primitives/tests/FunctionalTests/System.Net.Primitives.Functional.Tests.csproj
+++ b/src/System.Net.Primitives/tests/FunctionalTests/System.Net.Primitives.Functional.Tests.csproj
@@ -15,7 +15,6 @@
   <ItemGroup>
     <Compile Include="CookieTest.cs" />
     <Compile Include="CookieCollectionTest.cs" />
-    <Compile Include="CookieCollectionTest.netcoreapp.cs" Condition="'$(TargetGroup)' == 'netcoreapp'"/>
     <Compile Include="CookieContainerTest.cs" />
     <Compile Include="CookieTest\CookieContainerTest.cs" />
     <Compile Include="CookieTest\CookiePortTest.cs" />
@@ -23,9 +22,7 @@
     <Compile Include="DnsEndPointTest.cs" />
     <Compile Include="EndPointTest.cs" />
     <Compile Include="IPAddressParsing.cs" />
-    <Compile Include="IPAddressParsingSpan.cs" Condition="'$(TargetGroup)' == 'netcoreapp'" />
     <Compile Include="IPAddressTest.cs" />
-    <Compile Include="IPAddressSpanTest.cs" Condition="'$(TargetGroup)' == 'netcoreapp'" />
     <Compile Include="IPAddressMappingTest.cs" />
     <Compile Include="IPEndPointTest.cs" />
     <Compile Include="NetworkCredentialTest.cs" />
@@ -40,6 +37,11 @@
     <Compile Include="$(CommonTestPath)\System\Runtime\Serialization\Formatters\BinaryFormatterHelpers.cs">
       <Link>Common\System\Runtime\Serialization\Formatters\BinaryFormatterHelpers.cs</Link>
     </Compile>
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetGroup)' == 'netcoreapp'">
+    <Compile Include="CookieCollectionTest.netcoreapp.cs" />
+    <Compile Include="IPAddressSpanTest.cs" />
+    <Compile Include="IPAddressParsingSpan.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="$(CommonTestPath)\System\Diagnostics\RemoteExecutorConsoleApp\RemoteExecutorConsoleApp.csproj">
