PR netstandard feedback

--- a/src/System.Reflection.Context/src/Configurations.props
+++ b/src/System.Reflection.Context/src/Configurations.props
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <BuildConfigurations>
       netcoreapp;
+      netstandard;
       netstandard1.1;
       uap;
       _netfx;
