System.Drawing is doing a lot of unnecessary work.
This is a start on trying to remove some of it. This change is meant to show the general pattern I intend to follow.

- Fixes the managed array and uses it directly instead of copying multiple times
- Adds some basic sanity tests to validate that we're getting the expected output
- Splits existing negative tests into new files with sanity tests
- Adds a performance project

Output tests were generated and run before making the functional change.

--- a/src/System.Drawing.Common/src/System.Drawing.Common.csproj
+++ b/src/System.Drawing.Common/src/System.Drawing.Common.csproj
@@ -378,5 +378,8 @@
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="System\Drawing\Internal\GpPathData.cs" />
+  </ItemGroup>
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
 </Project>
