--- a/src/System.Memory/tests/System.Memory.Tests.csproj
+++ b/src/System.Memory/tests/System.Memory.Tests.csproj
@@ -37,7 +37,8 @@
     <Compile Include="Span\CtorArrayIntInt.cs" />
     <Compile Include="Span\CtorPointerInt.cs" />
     <Compile Include="Span\Empty.cs" />
-    <Compile Include="Span\EndsWith.byte.cs" />    
+    <Compile Include="Span\EndsWith.byte.cs" />
+    <Compile Include="Span\EndsWith.char.cs" />
     <Compile Include="Span\EndsWith.long.cs" />
     <Compile Include="Span\EndsWith.T.cs" />
     <Compile Include="Span\Equality.cs" />
@@ -87,7 +88,7 @@
     <Compile Include="ReadOnlyBuffer\ReadOnlySequenceTests.Common.char.cs" />
     <Compile Include="ReadOnlyBuffer\ReadOnlySequenceTests.Common.byte.cs" />
     <Compile Include="ReadOnlyBuffer\ReadOnlySequenceTests.Default.cs" />
-    <Compile Include="ReadOnlyBuffer\ReadOnlySequenceTests.Empty.cs" />
+    <Compile Include="ReadOnlyBuffer\ReadOnlySequenceTests.Empty.cs" />    
     <Compile Include="ReadOnlyBuffer\BufferSegment.cs" />
     <Compile Include="ReadOnlyBuffer\ReadOnlySequenceFactory.byte.cs" />
     <Compile Include="ReadOnlyBuffer\ReadOnlySequenceFactory.char.cs" />
@@ -105,8 +106,7 @@
     <Compile Include="ReadOnlySpan\CtorArrayIntInt.cs" />
     <Compile Include="ReadOnlySpan\CtorPointerInt.cs" />
     <Compile Include="ReadOnlySpan\Empty.cs" />
-    <Compile Include="ReadOnlySpan\EndsWith.byte.cs" />
-    <Compile Include="ReadOnlySpan\EndsWith.char.cs" />
+    <Compile Include="ReadOnlySpan\EndsWith.byte.cs" />    
     <Compile Include="ReadOnlySpan\EndsWith.long.cs" />    
     <Compile Include="ReadOnlySpan\EndsWith.T.cs" />
     <Compile Include="ReadOnlySpan\Equality.cs" />
