--- a/external/harvestPackages/harvestPackages.props
+++ b/external/harvestPackages/harvestPackages.props
@@ -2,19 +2,19 @@
 <!-- The versions can be updated by running UpdateToLatestStablePackages target in harvestPackages.depproj -->
 <ItemGroup>
 <PackageReference Include="Microsoft.CSharp">  <Version>4.5.0</Version></PackageReference>
-<PackageReference Include="Microsoft.VisualBasic">  <Version>10.2.0</Version></PackageReference>
+<PackageReference Include="Microsoft.VisualBasic">  <Version>10.3.0</Version></PackageReference>
 <PackageReference Include="Microsoft.Win32.Registry">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="Microsoft.Win32.Registry.AccessControl">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Buffers">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.CodeDom">  <Version>4.5.0</Version></PackageReference>
-<PackageReference Include="System.Collections.Immutable">  <Version>1.4.0</Version></PackageReference>
+<PackageReference Include="System.Collections.Immutable">  <Version>1.5.0</Version></PackageReference>
 <PackageReference Include="System.ComponentModel.Annotations">  <Version>4.5.0</Version></PackageReference>
-<PackageReference Include="System.Composition">  <Version>1.1.0</Version></PackageReference>
-<PackageReference Include="System.Composition.AttributedModel">  <Version>1.1.0</Version></PackageReference>
-<PackageReference Include="System.Composition.Convention">  <Version>1.1.0</Version></PackageReference>
-<PackageReference Include="System.Composition.Hosting">  <Version>1.1.0</Version></PackageReference>
-<PackageReference Include="System.Composition.Runtime">  <Version>1.1.0</Version></PackageReference>
-<PackageReference Include="System.Composition.TypedParts">  <Version>1.1.0</Version></PackageReference>
+<PackageReference Include="System.Composition">  <Version>1.2.0</Version></PackageReference>
+<PackageReference Include="System.Composition.AttributedModel">  <Version>1.2.0</Version></PackageReference>
+<PackageReference Include="System.Composition.Convention">  <Version>1.2.0</Version></PackageReference>
+<PackageReference Include="System.Composition.Hosting">  <Version>1.2.0</Version></PackageReference>
+<PackageReference Include="System.Composition.Runtime">  <Version>1.2.0</Version></PackageReference>
+<PackageReference Include="System.Composition.TypedParts">  <Version>1.2.0</Version></PackageReference>
 <PackageReference Include="System.Configuration.ConfigurationManager">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Data.SqlClient">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Diagnostics.DiagnosticSource">  <Version>4.5.0</Version></PackageReference>
@@ -24,9 +24,10 @@
 <PackageReference Include="System.IO.Ports">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Json">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Net.Http.WinHttpHandler">  <Version>4.5.0</Version></PackageReference>
+<PackageReference Include="System.Net.WebSockets.WebSocketProtocol">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Numerics.Vectors">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Reflection.DispatchProxy">  <Version>4.5.0</Version></PackageReference>
-<PackageReference Include="System.Reflection.Metadata">  <Version>1.5.0</Version></PackageReference>
+<PackageReference Include="System.Reflection.Metadata">  <Version>1.6.0</Version></PackageReference>
 <PackageReference Include="System.Reflection.TypeExtensions">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Runtime.CompilerServices.Unsafe">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Security.AccessControl">  <Version>4.5.0</Version></PackageReference>
@@ -41,7 +42,7 @@
 <PackageReference Include="System.Text.Encoding.CodePages">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Text.Encodings.Web">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.Threading.AccessControl">  <Version>4.5.0</Version></PackageReference>
-<PackageReference Include="System.Threading.Tasks.Dataflow">  <Version>4.8.0</Version></PackageReference>
+<PackageReference Include="System.Threading.Tasks.Dataflow">  <Version>4.9.0</Version></PackageReference>
 <PackageReference Include="System.Threading.Tasks.Extensions">  <Version>4.5.0</Version></PackageReference>
 <PackageReference Include="System.ValueTuple">  <Version>4.5.0</Version></PackageReference>
 </ItemGroup>
