--- a/src/Native/Unix/System.IO.Compression.Native/CMakeLists.txt
+++ b/src/Native/Unix/System.IO.Compression.Native/CMakeLists.txt
@@ -3,7 +3,7 @@ project(System.IO.Compression.Native)
 find_package(ZLIB REQUIRED)
 
 set(NATIVECOMPRESSION_SOURCES
-    pal_zlib.cpp
+    pal_zlib.c
 )
 
 #Include Brotli include files
