Enable Alpine ARM/ARM64 cross build
Also unify the build-rootfs.sh and toolchain.cmake with coreclr.
Fix few include paths that were set incorrectly as SYSTEM and
that was breaking the crossbuild for Alpine.

--- a/src/Native/Unix/System.Net.Http.Native/CMakeLists.txt
+++ b/src/Native/Unix/System.Net.Http.Native/CMakeLists.txt
@@ -23,7 +23,7 @@ set(NATIVEHTTP_SOURCES
     pal_versioninfo.cpp
 )
 
-include_directories(SYSTEM ${CURL_INCLUDE_DIR})
+include_directories(${CURL_INCLUDE_DIR})
 
 add_library(System.Net.Http.Native
     SHARED
