--- a/src/System.Reflection.Context/src/Configurations.props
+++ b/src/System.Reflection.Context/src/Configurations.props
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <BuildConfigurations>
-      netcoreapp;
-      netstandard;
+    <PackageConfigurations>
       netstandard1.1;
       uap;
+      netcoreapp;
+    </PackageConfigurations>
+    <BuildConfigurations>
+      $(PackageConfigurations);
+      netstandard;
       _netfx;
     </BuildConfigurations>
   </PropertyGroup>
