--- a/src/System.Diagnostics.Tracing/tests/System.Diagnostics.Tracing.Tests.csproj
+++ b/src/System.Diagnostics.Tracing/tests/System.Diagnostics.Tracing.Tests.csproj
@@ -3,24 +3,28 @@
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
   <PropertyGroup>
     <ProjectGuid>{7E0E1B11-FF70-461E-99F7-C0AF252C0C60}</ProjectGuid>
-    <DefineConstants Condition="'$(TargetGroup)' == 'netcoreapp' And '$(TargetsWindows)' == 'true'">$(DefineConstants);USE_ETW</DefineConstants>
+    <!-- <DefineConstants Condition="'$(TargetGroup)' == 'netcoreapp' And '$(TargetsWindows)' == 'true'">$(DefineConstants);USE_ETW</DefineConstants> -->
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netcoreapp-Unix-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netcoreapp-Unix-Release|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netcoreapp-Windows_NT-Debug|AnyCPU'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'netcoreapp-Windows_NT-Release|AnyCPU'" />
+
+  <!--Windows only files -->
   <ItemGroup Condition="'$(TargetsWindows)' == 'true'">
-    <Compile Condition="'$(TargetsWindows)' == 'true'" Include="BasicEventSourceTest\FuzzyTests.Windows.cs">
+    <Compile Include="BasicEventSourceTest\FuzzyTests.Windows.cs">
       <DependentUpon>FuzzyTests.cs</DependentUpon>
     </Compile>
-    <Compile Condition="'$(TargetsWindows)' == 'true'" Include="BasicEventSourceTest\Harness\EtwListener.cs">
+    <Compile Include="BasicEventSourceTest\Harness\EtwListener.cs">
       <DependentUpon>Listeners.cs</DependentUpon>
     </Compile>
-     <Compile Include="BasicEventSourceTest\TestEventCounter.Windows.cs">
+    <Compile Include="BasicEventSourceTest\TestEventCounter.Windows.cs">
       <DependentUpon>TestEventCounter.cs</DependentUpon>
     </Compile>
+    <Compile Include="BasicEventSourceTest\TestShutdown.Windows.cs" />
   </ItemGroup>
+
   <ItemGroup>
     <Compile Include="BasicEventSourceTest\Harness\EventTestHarness.cs" />
     <Compile Include="BasicEventSourceTest\FuzzyTests.cs" />
@@ -30,7 +34,6 @@
       <DependentUpon>Listeners.cs</DependentUpon>
     </Compile>
     <Compile Include="BasicEventSourceTest\TestFilter.cs" />
-    <Compile Include="BasicEventSourceTest\TestShutdown.cs" />
     <Compile Include="BasicEventSourceTest\TestsEventSourceLifetime.cs" />
     <Compile Include="BasicEventSourceTest\TestsManifestGeneration.cs" />
     <Compile Include="BasicEventSourceTest\TestsManifestNegative.cs" />
