Add cross-platform support for keep-alive socket options (closes #25040) (#29963)
* Add cross-platform support for keep-alive socket options

* Use the OS specific socket option name constant in native code

* Match the scoped API shape

* Use CMake configuration to check if compiling on OS X

* Execute keep-alive tests only for netcoreapp

* Make keep-alive enabled check less strict

* Align CMake keep-alive config to format used elsewhere

* Test one keep-alive setting at a time on all platforms

* Clean-up

* Test *SocketOption on all OS/version combinations

* Test support for keep-alive time setting on all OS/version combinations

* Rename keep-alive test methods

--- a/src/Native/Unix/Common/pal_config.h.in
+++ b/src/Native/Unix/Common/pal_config.h.in
@@ -85,6 +85,7 @@
 #cmakedefine01 BIND_ADDRLEN_UNSIGNED
 #cmakedefine01 INOTIFY_RM_WATCH_WD_UNSIGNED
 #cmakedefine01 HAVE_IN_EXCL_UNLINK
+#cmakedefine01 HAVE_TCP_H_TCP_KEEPALIVE
 
 // Mac OS X has stat64, but it is deprecated since plain stat now
 // provides the same 64-bit aware struct when targeting OS X > 10.5
